--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -7,3 +7,11 @@
 .sadrzaj--postova p {
   padding-top: 1em;
 }
+
+.sadrzaj--postova img {
+  @apply border-[10px] rounded-xl border-[#EDECEC] shadow-md;
+}
+
+blockquote > p {
+  @apply text-lg font-extralight text-center italic my-auto;
+}
